--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "NS",
   "license": "ISC",
   "dependencies": {
+    "@supabase/supabase-js": "^2.39.6",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "express-handlebars": "^7.1.2",
