Feature: added new proper dialog box and removed the overkill htmx only version. Now it uses the proper HTML dialog and a little js. Added proper Tailwind for dialog

--- a/package.json
+++ b/package.json
@@ -6,8 +6,9 @@
   "type": "commonjs",
   "scripts": {
     "start": "node app.js",
-    "dev": "concurrently \"nodemon app.js\"",
-    "build:css": "tailwindcss -i ./src/assets/styles/tailwind.css -o ./public/css/tailwind.css",
+    "dev": "concurrently \"nodemon app.js\" \"npm run watch:css\"",
+    "build:css": "postcss src/assets/styles/tailwind.css -o public/css/tailwind.css",
+    "watch:css": "postcss src/assets/styles/tailwind.css -o public/css/tailwind.css --watch",
     "lint": "eslint ."
   },
   "author": "NS",
@@ -27,12 +28,14 @@
     "sass": "^1.70.0"
   },
   "devDependencies": {
+    "autoprefixer": "^10.4.20",
     "chai": "^5.0.0",
     "concurrently": "^8.2.2",
     "eslint": "^8.56.0",
     "eslint-plugin-node": "^11.1.0",
     "mocha": "^10.2.0",
-    "nodemon": "^3.0.3",
+    "nodemon": "^3.1.4",
+    "postcss-cli": "^11.0.0",
     "tailwindcss": "^3.4.4"
   }
 }
