--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@rollup/plugin-node-resolve": "^15.2.3",
     "@supabase/supabase-js": "^2.39.6",
     "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
     "express": "^4.18.2",
     "express-handlebars": "^7.1.2",
     "helmet": "^7.1.0",
